--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>在线小说更新</title>
+    <title>document</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    <div>
-        <p>在线小说更新</p>
-    </div>
+    <header id="header">
+        {{message}}
+    </header>
+    <script src="index.js"></script>
 </body>
 </html>
