--- a/index.html
+++ b/index.html
@@ -3,12 +3,77 @@
 <head>
     <meta charset="UTF-8" />
     <title>document</title>
+    <meta charset=utf-8>
+    <meta name="keyword" content="">
+    <meta name=description content="">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <style type="text/css">
+        *{margin: 0;padding: 0;border: 0; font-family: "微软雅黑";}
+        li{list-style: none;}
+        html,body{
+            width: 100%;
+            height: 100%;
+        }
+        #header{
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+        }
+        .content{
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+        }
+        .left{
+            float: left;
+            width: 12%;
+            height: 100%;
+        }
+        .right{
+            float: right;
+            width: 88%;
+            height: 100%;
+        }
+        #leftNav{
+            padding: 0 10px;
+        }
+    </style>
+
+    <!-- leftNav template -->
+    <script type="text/x-template" id="leftNav-template">
+      <li>
+        <div
+          :class="{bold: isFolder}"
+          @click="toggle"
+          @dblclick="changeType">
+          {{ model.name }}
+          <span v-if="isFolder">[{{ open ? '-' : '+' }}]</span>
+        </div>
+        <ul v-show="open" v-if="isFolder">
+          <item
+            class="item"
+            v-for="(model, index) in model.children"
+            :key="index"
+            :model="model">
+          </item>
+          <!-- <li class="add" @click="addChild">+</li> -->
+        </ul>
+      </li>
+    </script>
 </head>
 <body>
     <header id="header">
         {{message}}
     </header>
+    <section class="content">
+        <div id="leftNav" class="left">
+            <item class="item" :model="treeData"></item>
+        </div>
+        <div class="right">
+
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
